Creating and uploading problems

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,3 +91,9 @@ doctrine_migrations:
     table_name: migration_versions
     name: Application Migrations
     organize_migrations: false
+
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
+            timestampable: true
