--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,9 +4,9 @@
 parameters:
     database_host: 127.0.0.1
     database_port: 3306
-    database_name: symfony
+    database_name: tester
     database_user: root
-    database_password: root
+    database_password:
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
