--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -54,3 +54,8 @@ services:
         tags:
             - { name: sonata.admin, manager_type: orm, label: Tournament }
         public: true
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
