compile source code

--- a/utility/config.json
+++ b/utility/config.json
@@ -2,6 +2,6 @@
     "MySqlHost": "localhost",
     "MySqlPort": "3306",
     "MySqlUser": "root",
-    "MySqlPassword": "",
+    "MySqlPassword": "root",
     "MySqlDbName": "checker"
 }
