--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -54,3 +54,7 @@ services:
         tags:
             - { name: sonata.admin, manager_type: orm, label: Tournament }
         public: true
+
+    app.service.problem:
+        class: AppBundle\Service\Problem
+        arguments: ["@doctrine.orm.entity_manager"]
