--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,3 +101,15 @@ stof_doctrine_extensions:
         default:
             sluggable: true
             timestampable: true
+
+gos_web_socket:
+    server:
+        port: 8080        #The port the socket server will listen on
+        host: 127.0.0.1   #The host ip to bind to
+        router:
+            resources:
+                - "Resources/config/pubsub/routing.yml"
+    pushers:
+        wamp:
+            host: 127.0.0.1
+            port: 8080
