--- a/utility/config/config.json
+++ b/utility/config/config.json
@@ -3,5 +3,6 @@
     "MySqlPort": "3306",
     "MySqlUser": "root",
     "MySqlPassword": "root",
-    "MySqlDbName": "tester"
+    "MySqlDbName": "tester",
+    "":""
 }
