--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "sonata-project/admin-bundle": "^3.23",
         "sonata-project/doctrine-orm-admin-bundle": "^3.1",
+        "stfalcon/tinymce-bundle": "^2.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
