--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,3 +17,9 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+fos_comment_api:
+    type: rest
+    resource: "@FOSCommentBundle/Resources/config/routing.yml"
+    prefix: /api
+    defaults: { _format: html }
