--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/comment-bundle": "^2.0",
         "friendsofsymfony/user-bundle": "^2.0",
         "gos/web-socket-bundle": "^1.8",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -33,6 +34,7 @@
         "sonata-project/doctrine-orm-admin-bundle": "^3.1",
         "stfalcon/tinymce-bundle": "^2.2",
         "stof/doctrine-extensions-bundle": "^1.2",
+        "symfony/assetic-bundle": "^2.8",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
