--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "tester",
   "homepage": "https://github.com/adilets/tester",
   "authors": [
-    "Zamirbek Abdyldaev <sampobek@gmail.com>"
+    "Zamirbek Abdyldaev <sampobek@gmail.com>",
+    "Adilet Ibragimov <i.adilets@gmail.com>"
   ],
   "description": "",
   "main": "",
@@ -17,6 +18,7 @@
   "dependencies": {
     "bulma": "^0.6.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^2.2"
+    "jquery": "^2.2",
+    "ace-builds": "^1.3.0"
   }
 }
