tst-44: Integrate pagination to rating, problem pages

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,3 +134,7 @@ assetic:
         cssrewrite: ~
 
     bundles: [ "FOSCommentBundle" ]
+
+knp_paginator:
+    template:
+        pagination: 'AppBundle::pagination.html.twig'
