--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "friendsofsymfony/user-bundle": "^2.0",
         "gos/web-socket-bundle": "^1.8",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-paginator-bundle": "^2.7",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sonata-project/admin-bundle": "^3.23",
