--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,5 +1,7 @@
 # Learn more about services, parameters and containers at
 # https://symfony.com/doc/current/service_container.html
+parameters:
+    utility_path: '%kernel.root_dir%/../utility/main'
 
 services:
     # default configuration for services in *this* file
@@ -35,8 +37,24 @@ services:
     admin.user:
         class: AppBundle\Admin\UserAdmin
         arguments: [~, AppBundle\Entity\User, ~]
+        calls:
+            - [setUserManager, ["@fos_user.user_manager"]]
         tags:
             - { name: sonata.admin, manager_type: orm, label: User }
+        public: true
+
+    admin.university:
+        class: AppBundle\Admin\UniversityAdmin
+        arguments: [~, AppBundle\Entity\University, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: University }
+        public: true
+
+    admin.group:
+        class: AppBundle\Admin\GroupAdmin
+        arguments: [~, AppBundle\Entity\Group, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Group }
         public: true
 
     admin.problem:
@@ -88,3 +106,8 @@ services:
         class: AppBundle\Topic\TesterTopic
         tags:
             - { name: gos_web_socket.topic }
+
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
