--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,10 +1,7 @@
 # Learn more about services, parameters and containers at
 # https://symfony.com/doc/current/service_container.html
 parameters:
-    utility_path: '%kernel.root_dir%/../utility/main'
-
-parameters:
-    utility_path: '%kernel.root_dir%/../utility/main'
+    utility_path: '%kernel.root_dir%/../utility'
 
 services:
     # default configuration for services in *this* file
