--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,6 +2,7 @@
 # https://symfony.com/doc/current/service_container.html
 parameters:
     utility_path: '%kernel.root_dir%/../utility'
+    chroot_path: '/var/chroot'
 
 services:
     # default configuration for services in *this* file
@@ -117,4 +118,11 @@ services:
         arguments: [~, AppBundle\Entity\Topic, SonataAdminBundle:CRUD]
         tags:
             - { name: sonata.admin, manager_type: orm, label: Topic }
+        public: true
+
+    app.admin.news:
+        class: AppBundle\Admin\NewsAdmin
+        arguments: [~, AppBundle\Entity\News, SonataAdminBundle:CRUD]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: News }
         public: true
